src/test/run-pass/multiple-trait-bounds.rs
fn f<T:Eq + Ord>(_: T) {
}

fn main() {
    f(3);
}

